New in master
=============

Features
--------

* Add ``navbar_custom_bg`` theme option to ``bootstrap4`` and document
  options for ``bootstrap4`` better (Issue #3443)
* Add Marathi translation
* Restore ``caps`` typogrify filter (wraps strings of capital letters
  with ``<span class="caps">`` (via Issue #3405)
* Improve ``nikola auto`` performance with rate-limiting, support
  ``-n`` argument to pass to ``nikola build`` (Issue #3401)
* Added Marathi translation
* Add support for the `Utterances <https://utteranc.es>`_ comment system.

Bugfixes
--------

* Also fix symlinks when installing from source with pip; if possible,
  enable Developer Mode and run ``git config --global core.symlinks true``
  before cloning the Nikola repo
* Fix ``LINK_CHECK_WHITELIST`` having issues due to mixing Unicode
  and bytestrings (Issue #3466)
* Add support for ``nbconvert>=6.0.0`` (Issue #3457)
* Read files as utf-8-sig to allow BOM in input files
* Don’t break slugs with slashes in ``doc`` directive (Issue #3450)
* Avoid warnings from type annotations in ``auto`` caused by missing
  ``aiohttp`` (Issue #3451)
* Ensure query strings and fragments are kept with ``URL_TYPE =
  "full_path"`` (Issue #3448)
* Don’t run typogrify filters on ``<title>`` tag to avoid adding extra
  tags(Issue #3405)
* Fix handling of duplicate plugins on Windows
* Allow else clause in post-list plugin. (Issue #3436)
* Ensure `type` metadata value from plugins is preserved (Issue 3445)
* Fix path handlers with slashes on Windows

New in v8.1.1
=============

Bugfixes
--------

* Default to no line numbers in code blocks, honor CodeHilite
  requesting no line numbers. Listing pages still use line numbers
  (Issue #3426)
* Remove duplicate MathJax config in bootstrap themes (Issue #3427)
* Fix ``doit`` requirement to ``doit>=0.32.0`` (Issue #3422)

New in v8.1.0
=============

Features
--------

* Support posts without titles (Issue #3408)
* Support WebP image scaling (Issue #3399)